tests/paczka1/small_fuzzy/44739121.err
Error in line 6: jpU S869 -1,6
Error in line 9: MDF9gmDsDb A20 19,5
Error in line 12: A20 A20 93,3
